# cvoptimizador

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
api/: .env.example  README.md  main.py  pyproject.toml  schemas.py
api/middleware/: auth.py
api/routers/: analyze.py  pdf.py
api/services/: claude.py  document_extractor.py  llm.py  pdf_extractor.py  pdf_generator.py
shared/types/: auth.ts  index.ts  optimization.ts  package.json  payment.ts
supabase/migrations/: 001_initial_schema.sql  002_storage_bucket.sql
web/: .env.example  package.json  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/download/[id]/: page.tsx
web/src/app/(app)/results/[id]/: page.tsx
web/src/app/(app)/upload/: page.tsx
web/src/app/(marketing)/: page.tsx
web/src/app/api/download/[id]/: route.ts
web/src/app/api/optimize/: route.ts
web/src/app/api/payment/confirm/: route.ts
web/src/app/api/payment/create/: route.ts
web/src/components/: FileUpload.tsx  KeywordList.tsx  PaymentButton.tsx  ScoreDisplay.tsx
web/src/components/ui/: button.tsx
web/src/lib/: api-client.ts  auth.ts  cleanup.ts  rate-limit.ts  supabase.ts  trial.ts  webpay.ts
